--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   device_info_plus: ^10.1.2
   battery_plus: ^6.0.3
+  usage_stats: ^1.2.0
 
 dev_dependencies:
   flutter_test:
